# Rust-OS

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  flake.nix
.cargo/: config.toml
.github/workflows/: rust.yml
qemu_runner/: Cargo.toml
qemu_runner/src/: lib.rs  main.rs
ramdisk/: README.txt
ramdisk/apps/: cowsay.wasm
ramdisk/etc/: config.txt
rust_os/: Cargo.toml  README.md  x86_64-LL-2025.json
rust_os/.cargo/: config.toml
rust_os/src/: allocator.rs  entry_point.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  qemu.rs  serial.rs  vga_buffer.rs  wasm_game.rs
rust_os/src/filesystem/: error.rs  mod.rs  path.rs  tar.rs
rust_os/src/filesystem/backends/: mod.rs  tar.rs
rust_os/src/task/: executor.rs  keyboard.rs  mod.rs  shell.rs  simple_executor.rs
rust_os/src/wasm/: cowsay.wat  snake.wasm  snake.wat
rust_os/tests/: basic_boot.rs  double_fault.rs  filesystem.rs  heap_allocation.rs  should_panic.rs
src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  qemu.rs  serial.rs  vga_buffer.rs
src/task/: keyboard.rs
tests/: basic_boot.rs  double_fault.rs  heap_allocation.rs  should_panic.rs
