[package]
name = "rust_os"
version = "0.1.0"
edition = "2024"
authors = [
    "Unterweger Konstantin <konstantin.Unterweger@gmail.com>",
    "Köppl Michael <michael@koeppl.dev>",
    "Loidolt Lukas <>",
    "Pritzl Johannes Benedikt <>",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader_api = "0.11.13"
volatile = "0.2.6"
spin = "0.9.4"
x86_64 = "0.15.4"
uart_16550 = "0.4.0"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.10.5"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.31"
default-features = false
features = ["alloc"]

[[bin]]
name = "rust_os"
test = true
bench = false

[[test]]
# We don't need the harness flag for tests that only have a single test
# function
name = "should_panic"
harness = false

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33 # = (0x10 << 1) | 1
test-timeout = 300

[[test]]
name = "double_fault"
harness = false
