[package]
name = "rust_os"
version = "0.1.0"
edition = "2024"
authors = [
    "Unterweger Konstantin <konstantin.Unterweger@gmail.com>",
    "Köppl Michael <michael@koeppl.dev>",
    "Loidolt Lukas <>",
    "Pritzl Johannes Benedikt <>",
]

[dependencies]
bootloader_api = "0.11.13"
volatile = "0.2.6"
spin = "0.9.4"
x86_64 = "0.15.4"
uart_16550 = "0.4.0"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.10.5"
noto-sans-mono-bitmap = "0.3.1"
conquer-once = { version = "0.4.0", default-features = false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "rust_os"
test = true
bench = false

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33 # = (0x10 << 1) | 1
test-timeout = 300

[[test]]
name = "double_fault"
harness = false
