[package]
name = "rust_os"
version = "0.1.0"
edition = "2024"
authors = [
    "Unterweger Konstantin <konstantin.Unterweger@gmail.com>",
    "Köppl Michael <michael@koeppl.dev>",
    "Loidolt Lukas <>",
    "Pritzl Johannes Benedikt <>",
]

[lib]
doctest = false

[dependencies]
bootloader_api = "0.11.13"
volatile = "0.2.6"
spin = "0.9.4"
x86_64 = "0.15.4"
uart_16550 = "0.4.0"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.10.5"
noto-sans-mono-bitmap = "0.3.1"
wasmi = { version = "1.0.6", default-features = false}
no_std_io = "0.6.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.12"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.31"
default-features = false
features = ["alloc"]

[dependencies.tarfs]
version = "0.2.6"
default-features = false

[[bin]]
name = "rust_os"
test = true
bench = false

[[test]]
name = "double_fault"
harness = false

[[test]]
name = "should_panic"
harness = false